--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background-color:black;
     display:flex;
-    justify-content: center;
+    
     font-size:12px;
 }
 
@@ -14,6 +14,7 @@ body {
     color:white;
     display:flex;
     width:800px;
+    margin-left:20%;
     
 
 }
@@ -46,3 +47,12 @@ input {
     max-width:100px;
   }
 
+
+  /* menu box */
+
+.menu {
+    
+    color:white;
+    margin-left:1%;
+    margin-top:20px;
+}
