--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,13 @@ body {
 .calculatorBox {
 
     padding-top:40px;
-    margin-top:5%;
+    margin-top:6%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius:5px;
     color:white;
     display:flex;
     width:700px;
-    margin-left:22%;
+    margin-left:15%;
     height:520px;
     min-width:400px;
     background-color: rgba(19, 7, 86, 0.274);
@@ -69,6 +69,10 @@ textarea {
     
     color:white;
     margin-left:1%;
+    display:flex;
+    width: 200px;
+    background-color: rgba(19, 7, 86, 0.274);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     
 }
 
@@ -107,4 +111,37 @@ input[type="submit"]:hover {
   box-shadow:0 1px 8px rgba(0, 0, 0, 0.2);
   transition: background-color 0.4s;
   
+}
+
+.menuButton {
+  border: 1px solid white;
+  background-color: rgb(81, 160, 239);
+  border-radius: 2px;
+  height:30px;
+  width:180px;
+  display:flex;
+  align-items:center;
+  margin-top:10px;
+  margin-left:10px;
+  justify-items:auto;
+}
+
+.searchBox {
+
+  padding: 0;
+  margin-left:-85%;
+  margin-top:-18%;
+  height: 42px;
+  width: 99%;
+  background-color:white;
+  border-radius:25px;
+ 
+}
+
+.searchBoxInput {
+  width:95%;
+  height:40px;
+  border-radius:25px;
+  border:none;
+  margin-left:5%;
 }
