--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,8 @@ input[type="submit"]:hover {
 
   .menu {
     
-    color:white;
+    color:rgb(255, 255, 255);
+    font-weight:1000;
     margin-left:1%;
     display:flex;
     flex-direction:column;
@@ -120,9 +121,10 @@ input[type="submit"]:hover {
 
 /*--- menu buttons ---*/ 
 
-#dailyReport {
-  border: 1px solid white;
-  background-color: rgb(81, 160, 239);
+
+#Performance, #Statistics, #dailyReport, #TargetTracker {
+  
+  background-color: rgba(71, 153, 229, 0.721);
   border-radius: 2px;
   height:30px;
   width:180px;
@@ -131,35 +133,19 @@ input[type="submit"]:hover {
   line-height:30px;
   margin-top:10px;
   margin-left:10px;
+  transition: box-shadow 0.4s;
+  transition: margin-left 0.4s;
   
 }
 
-#Performance {
-  border: 1px solid white;
-  background-color: rgb(81, 160, 239);
-  border-radius: 2px;
-  height:30px;
-  width:180px;
-  display:flex;
-  justify-content:center;
-  line-height:30px;
-  margin-top:10px;
-  margin-left:10px;
-  
+#Performance:hover, #Statistics:hover, #dailyReport:hover, #TargetTracker:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  margin-left: 12px;
+  cursor:pointer;
 }
 
-#Statistics {
-  border: 1px solid white;
-  background-color: rgb(81, 160, 239);
-  border-radius: 2px;
-  height:30px;
-  width:180px;
-  display:flex;
-  justify-content:center;
-  line-height:30px;
-  margin-top:10px;
-  margin-left:10px;
-  
+#Performance:active, #Statistics:active, #dailyReport:active, #TargetTracker:active {
+  background-color: rgba(42, 135, 223, 0.721);
 }
 
 
