--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ textarea {
   
 }
 
-input[type="submit"] {
+.form_submit_button {
   background-color:rgb(43, 139, 234);
   color:white;
   align-content: center;
@@ -93,7 +93,7 @@ input[type="submit"] {
   
 }
 
-input[type="submit"]:hover {
+.form_submit_button:hover {
   background-color:rgb(81, 160, 239);
   color:white;
   box-shadow:0 1px 8px rgba(0, 0, 0, 0.2);
